--- a/Servlets/src/main/webapp/WEB-INF/web.xml
+++ b/Servlets/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
    <servlet>
-    <servlet-name>Categories</servlet-name>
-    <servlet-class>ua.goit.servlets.servlets.Categories</servlet-class>
+    <servlet-name>CategoriesServlet</servlet-name>
+    <servlet-class>ua.goit.servlets.servlets.CategoriesServlet</servlet-class>
   </servlet>
   <servlet>
-    <servlet-name>Projects</servlet-name>
-    <servlet-class>ua.goit.servlets.servlets.Projects</servlet-class>
+    <servlet-name>ProjectsServlet</servlet-name>
+    <servlet-class>ua.goit.servlets.servlets.ProjectsServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Categories</servlet-name>
+    <servlet-name>CategoriesServlet</servlet-name>
     <url-pattern>/categories</url-pattern>
   </servlet-mapping>
     <servlet-mapping>
-    <servlet-name>Projects</servlet-name>
+    <servlet-name>ProjectsServlet</servlet-name>
     <url-pattern>/projects</url-pattern>
   </servlet-mapping>
   </web-app>
